[package]
name = "rust_d3_array"
version = "0.1.0"
authors = ["martin frances <martinfrances107@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
geo={git = "https://github.com/martinfrances107/geo.git", branch="cyclic_match", features=["use-approx"] }
num-traits = "0.2"

[dev-dependencies]
pretty_assertions = "0.7.2"
