[package]
name = "rust_d3_array"
version = "0.1.0"
authors = ["martin frances <martinfrances107@hotmail.com>"]
edition = "2021"
description = "A port of D3/d3-array into rust"
readme = "README.md"
repository="https://github.com/martinfrances107/rust_d3_array"

[dependencies]
geo="0.18.0"
num-traits = "0.2"

[dev-dependencies]
pretty_assertions = "0.7.2"
